2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh (--enable-multilib, --disable-multilib): Add
	argument handling accidentally deleted.

2013-01-31  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh, run-tests.sh: Add options to control parallelism
	* all-version.sh: Remove specification of PARALLEL

2013-01-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (save_res): Append errors to log, not overwrite.
	* dejagnu/baseboards/arc-linux-aa4.exp: Improve commenting, and
	general password field.
	* run-elf32-tests.sh: Add target_dir.
	* run-tests.sh: Tidy up error messages. Add better commenting
	* run-uclibc-tests.sh: Make target_dir generic, tidy up layout

2013-01-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --elf32/--no-elf32 and --linux/--no-linux
	options. Negate tests where empty "then" clause.
	* build-uclibc.sh: Remove build of simulator.

2013-01-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Use a hostname rather than
	number.

2013-01-18  Anton Kolesov <akolesov@synopsys.com>

	* arc-init.sh (save_res): use "tr" instead of "dos2unix" to replace
	Windows' line endings with Linux' line endings.

2013-01-18  Anton Kolesov <akolesov@synopsys.com>

	* run-tests.sh. run-uclibc-tests.sh: Handle tests for big endian properly.

2013-01-18  Anton Kolesov <akolesov@synopsys.com>

	* run-tests.sh, run-elf32-tests.sh, run-uclibc-tests.sh, arc-init
	(run_check): Return non-zero value from scripts if there are failed tests.

2013-01-11  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check): Don't fail overall if make fails.

2013-01-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check, save_res): move functions to run tests
	and process results to this script. Clean up recording of results.
	* run-elf32-tests.sh, run-uclibc-tests.sh: New scripts
	incorporating target specific code from run-tests.sh.